--- a/index.html
+++ b/index.html
@@ -158,10 +158,18 @@
         color: inherit;
         display: block;
       }
-      .product-icon {
-        font-size: 48px;
+      .product-image {
+        width: 100%;
+        height: 200px;
+        overflow: hidden;
         margin-bottom: 16px;
-        filter: drop-shadow(0 4px 8px rgba(109,211,251,0.35));
+        border-radius: 12px;
+        background: linear-gradient(135deg, rgba(109,211,251,0.1), rgba(179,255,143,0.05));
+      }
+      .product-image img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
       }
       .product-card h3 {
         font-size: 20px;
@@ -313,7 +321,9 @@
 
             <article class="product-card">
               <a href="/products/product-1755703224043-1/index.html" class="product-link">
-                <div class="product-icon">🧲</div>
+                <div class="product-image">
+                    <img src="/products/product-1755703224043-1/product-image.png" alt="ThermoMag Window Insulation Panels" loading="lazy" />
+                  </div>
                 <h3>ThermoMag Window Insulation Panels</h3>
                 <p class="price">€49–€89 per window kit (various sizes)</p>
                 <p class="description">ThermoMag Window Insulation Panels - The perfect solution for Renters and homeowners in older apartments/houses with drafty single-glazed windows</p>
@@ -324,7 +334,9 @@
 
             <article class="product-card">
               <a href="/products/product-1755703224045-2/index.html" class="product-link">
-                <div class="product-icon">🧺</div>
+                <div class="product-image">
+                    <img src="/products/product-1755703224045-2/product-image.png" alt="BalkoDry Privacy &amp; Drying System" loading="lazy" />
+                  </div>
                 <h3>BalkoDry Privacy &amp; Drying System</h3>
                 <p class="price">€39–€79 per set</p>
                 <p class="description">BalkoDry Privacy &amp; Drying System - The perfect solution for Apartment dwellers with small balconies/lođas—students, families, and shared households</p>
@@ -335,7 +347,9 @@
 
             <article class="product-card">
               <a href="/products/product-1755703224046-3/index.html" class="product-link">
-                <div class="product-icon">🏺</div>
+                <div class="product-image">
+                    <img src="/products/product-1755703224046-3/product-image.png" alt="BalkanPantry Stack (Modular Preserving Jar System)" loading="lazy" />
+                  </div>
                 <h3>BalkanPantry Stack (Modular Preserving Jar System)</h3>
                 <p class="price">€29–€59 per starter set (6–12 jars accessories)</p>
                 <p class="description">BalkanPantry Stack (Modular Preserving Jar System) - The perfect solution for Home cooks and small producers making ajvar, turšija, slatko; urban families storing jars in small spaces</p>
